--- a/WEB-INF/properties/command.properties
+++ b/WEB-INF/properties/command.properties
@@ -16,7 +16,8 @@ createaccount = command.CreateAccountCommand
 createaccountjump = command.CreateAccountJumpCommand
 login = command.LoginCommand
 loginjump = command.LoginJumpCommand
-logout = command.LogOutCommand
+logout = command.LogoutCommand
+logoutjump = command.LogoutJumpCommand
 showpost = command.ShowPostCommand
 removereply = command.RemoveReplyCommand
 addreply = command.AddReplyCommand
@@ -26,7 +27,12 @@ search = command.SearchCommand
 follow = command.FollowCommand
 unfollow = command.UnFollowCommand
 addpost = command.AddPostCommand
+addpostj = command.AddPostJumpCommand
 newcreateaccount = command.CreateAccountCommand
 front = command.TestFrontCommand
 postlist = command.GetPostListCommand
+postnext = command.GetNextPostCommand
 postsingle = command.GetSinglePostCommand
+loginuserinfo = command.LoginUserInfoCommand
+openwrite = command.OpenWriteCommand
+postwrite = command.AddPostCommand
